@@ -1,3 +1,9 @@
+2013-08-27  Dario Rodriguez <dario@artica.es>
+
+	* include/functions_config.php,
+	godmode/setup/setup.php: Fixed a setup problem updating
+	language.
+
 2013-08-26  Dario Rodriguez <dario@artica.es>
 
 	* operation/incidents/incident_inventory_contacts.php: Fixed
